Fix for bug #87133 Can't select last few lines of text in an Editor

Modified GetClosestLine() to include first (0) and last (n-1) line
in search if neccessary. Returned index should now be guaranteed to be
within 0 to n-1 when exiting main loop. Removed unused var and define,
added comments, and renamed countLines to numLines.

r=waterson@netscape.com,mjudge@netscape.com
sr=blizzard@mozilla.org
a=chofmann@netscape.com